--- a/main.css
+++ b/main.css
@@ -9,7 +9,10 @@ nav ul{
 }
 
 nav ul li {
+	background: black;
+	color: white;
 	display: inline-block;
 	list-style-type: none;
+	padding: 5px 15px
 
 }
